<resources>
    <string name="app_name">Hipótese Gaia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hipótese de Gaia</string>
    <string name="nav_header_subtitle">appoloudesc@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_Assunto1">Ciências Exatas e da Terra</string>
    <string name="menu_Assunto2">Matematica</string>
    <string name="menu_Assunto3">Probabilidade e Estatística</string>
    <string name="menu_Assunto4">Ciência da Computação</string>
    <string name="menu_Assunto5">Astronomia</string>
    <string name="menu_Assunto6">Física</string>
    <string name="menu_Assunto7">Química</string>
    <string name="menu_Assunto8">Geociências</string>
    <string name="menu_Assunto9">Oceanografia</string>

    <string name="Assunto1">
            A grande área das Ciências Exatas e da Terra tem por característica a presença de disciplinas baseadas em cálculos físico-matemáticos. O campo é muito amplo, envolve as Áreas como Matemática e Ciência da Computação, além das Geociências.
       \nEmbora estejam incluídas sobre uma mesma grande área do conhecimento, Essas Áreas têm perfis bem distintos. Por isso, fica difícil traçar um único perfil no campo de atuação. Algumas, como Matemática e Física continuam mais voltadas para o meio acadêmico, formando professores e pesquisadores. Outras, como Ciência da Computação e Geociências, formam profissionais mais voltados para atuação direta no mercado de trabalho.
    </string>
    <string name="Assunto2">
        A Matemática é uma ciência que busca estabelecer, de maneira clara e estruturada, conceitos e técnicas para a compreensão de fenômenos. Entre os tópicos de estudo da Matemática, estão os números e suas operações, as estruturas algébricas, entre muitos outros.
           \nApesar de presentes em todas as Áreas das Ciências Exatas e da Terra, esses conteúdos estão concentrados em áreas específicas, como a Álgebra, a Análise, a Matemática Aplicada, a Geometria e Topologia.
 </string>
    <string name="Assunto3">
        A probabilidade, é o estudo da frequência dos eventos, como forma de testar as possibilidades. A estatística trabalha com incertezas, ou seja, ajuda a calcular essas incertezas, sempre dentro de uma margem de erro aproximada.
        \n Ambas somente são possíveis se tivermos um espaço amostral definido. Esses dois campos de estudo estão relacionados com outros tópicos Ciências Exatas e da Terra, como Matemática, Ciência da Computação e Física.
    </string>
    <string name="Assunto4">É a ciência que estuda dispositivos, ferramentas tecnológicas e metodologias computacionais, que informatizam ou automatizam processos, de modo que se criem soluções tecnológicas por meio de processamento de dados. Os estudos oriundos da Ciência da Computação podem ser aplicados em qualquer área do conhecimento humano em que seja possível definir métodos de resolução de problemas baseados em repetições previamente observadas.
        \nÉ comum que as pessoas acherem que a ciência da computação uma Subárea da Matemática, mas ela é sua propria Área com suas Subáreas sendo a Teoria da Computação, Matemática da Computação, Metodologia e Técnicas da Computação, o Processamento Gráfico e os Sistemas de Computação.
    </string>
    <string name="Assunto5">
        Essa é a Área dos objetos celestes e fenômenos que se originam fora da atmosfera terrestre. Ela se preocupa com a evolução, física, química, meteorologia, e movimento dos objetos celestes, assim como a formação e desenvolvimento do universo. A astronomia inclui a examinação, estudo e modelagem de estrelas, planetas, cometas, galáxias e o cosmos. A maioria das informações usadas por astrônomos é reunida por observação remota, apesar de alguns laboratórios reproduzirem fenômenos celestes.
        \n  A astronomia trabalha com temas bastante complexos que são abordados por diferentes ramificações dessa ciência. Dividida anteriormente em observacional e teórica, a astronomia hoje é composta pelas seguintes subáreas: a Astronomia de Posição e Mecânica Celeste, a Astrofísica Estelar, a Astrofísica do Meio Interestelar, a Astrofísica Extragalactica, a Astrofísica do Sistema Solar e Instrumentação Astronômica.



         </string>
    <string name="Assunto6">
        A física encorpora o estudo dos constituintes fundamentais do universo, as forças e as interações que elas exercem entre si, e os resultados produzidos por essas interações. Em geral, a física é considerada como a ciência fundamental já que as outras ciências naturais utilizam e obedecem os princípios e leis estabelecidas por este campo. A física depende consideravelmente da matemática como uma ferramenta de trabalho lógico para a formulação e quantificação dos princípios.
       \nO estudo dos princípios do universo tem uma longa história e deriva largamente da observação e experimentação direta. A formulação de teorias sobre as leis que governam o universo tem sido central para os estudos da física desde seu início, com a filosofia gradualmente dando lugar a uma experimentação sistemática e quantitativa com testes e observações das fontes de verificação.
    </string>
    <string name="Assunto7">
        A Química é a área da ciência que tem como objeto de estudo a matéria e suas transformações. A Química analisa a estrutura, as propriedades e o comportamento de substâncias, para que seja possível prever ou explicar as alterações registradas na ocorrência de reações químicas, que são processos químicos de transformação.
        \n  Com base nisso, são desenvolvidos produtos e metodologias capazes de tornar a vida mais segura, fácil e confortável, trazendo benefícios à sociedade. Para que isso seja mais bem concretizado, a Química é dividida em subáreas, que são a Química Inorgânica, a Química Orgânica, a Química Analítica, a Físico-Química e a Bioquímica.
    </string>
    <string name="Assunto8">
        É a Área que abrange disciplinas científicas sobre o estudo da Terra, as Geociências analisam rochas, atmosferas, placas tectônicas, entre outras composições do planeta. Os estudos das Geociências são tanto em laboratório quanto em campo, tanto em desertos ou florestas quanto em áreas urbanas \n
       Eles também estudam as rochas, suas composições, exploram e analisam jazidas minerais, carvão, gás natural e petróleo, além de analisarem o clima para compreenderem como todos os elementos e características do planeta interagem entre si. Assim sendo suas subáreas são a Geologia, a Geofísica, a Meteorologia, a Geodésia e a Geografia Física.
         </string>
    <string name="Assunto9">
    A Oceanografia é a ciência que estuda os oceanos e as zonas costeiras, tanto sob os aspectos bióticos e abióticos, como também quanto aos processos naturais e sociais que atuam nestes ambientes considerando, portanto, atividades socioeconômicas e culturais.  \n
    Dentre as áreas de atuação da ciência oceanográfica podem ser citadas: a modelagem e as previsões climáticas; a investigação de novos recursos renováveis e não renováveis; o diagnóstico, o controle e a mitigação da poluição; a conservação, recuperação e manejo de ambientes naturais e seus recursos; a adequação de obras e atividades humanas ao ambiente marinho. Suas Subáreas são a Oceanografia Biológica, a Oceanografia Física, a Oceanografia Química e a Oceanografia Geológica.
    </string>

</resources>