<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icinicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_assunto1"
            android:icon="@drawable/icterra"
            android:title="@string/menu_Assunto1" />
        <item
            android:id="@+id/nav_assunto2"
            android:icon="@drawable/icmatematica"
            android:title="@string/menu_Assunto2" />
        <item
            android:id="@+id/nav_assunto3"
            android:icon="@drawable/iccomputacao"
            android:title="@string/menu_Assunto3" />
        <item
            android:id="@+id/nav_assunto4"
            android:icon="@drawable/icpro"
            android:title="@string/menu_Assunto4" />
        <item
            android:id="@+id/nav_assunto5"
            android:icon="@drawable/icastrologia"
            android:title="@string/menu_Assunto5" />
        <item
            android:id="@+id/nav_assunto6"
            android:icon="@drawable/icfisica"
            android:title="@string/menu_Assunto6" />
        <item
            android:id="@+id/nav_assunto7"
            android:icon="@drawable/icquimica"
            android:title="@string/menu_Assunto7" />
        <item
            android:id="@+id/nav_assunto8"
            android:icon="@drawable/icgeologia"
            android:title="@string/menu_Assunto8" />
        <item
            android:id="@+id/nav_assunto9"
            android:icon="@drawable/icoceano"
            android:title="@string/menu_Assunto9" />
    </group>
</menu>