<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hipotesegaia.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_assunto1"
        android:name="com.example.hipotesegaia.ui.Assunto1.Assunto1Fragment"
        android:label="@string/menu_Assunto1"
        tools:layout="@layout/fragment_assunto1" />

    <fragment
        android:id="@+id/nav_assunto2"
        android:name="com.example.hipotesegaia.ui.Assunto2.Assunto2Fragment"
        android:label="@string/menu_Assunto2"
        tools:layout="@layout/fragment_assunto2" />
    <fragment
        android:id="@+id/nav_assunto3"
        android:name="com.example.hipotesegaia.ui.Assunto3.Assunto3Fragment"
        android:label="@string/menu_Assunto3"
        tools:layout="@layout/fragment_assunto3" />
    <fragment
        android:id="@+id/nav_assunto4"
        android:name="com.example.hipotesegaia.ui.Assunto4.Assunto4Fragment"
        android:label="@string/menu_Assunto4"
        tools:layout="@layout/fragment_assunto4" />
    <fragment
        android:id="@+id/nav_assunto5"
        android:name="com.example.hipotesegaia.ui.Assunto5.Assunto5Fragment"
        android:label="@string/menu_Assunto5"
        tools:layout="@layout/fragment_assunto5" />
    <fragment
        android:id="@+id/nav_assunto6"
        android:name="com.example.hipotesegaia.ui.Assunto6.Assunto6Fragment"
        android:label="@string/menu_Assunto6"
        tools:layout="@layout/fragment_assunto6" />
    <fragment
        android:id="@+id/nav_assunto7"
        android:name="com.example.hipotesegaia.ui.Assunto7.Assunto7Fragment"
        android:label="@string/menu_Assunto7"
        tools:layout="@layout/fragment_assunto7" />
    <fragment
        android:id="@+id/nav_assunto8"
        android:name="com.example.hipotesegaia.ui.Assunto8.Assunto8Fragment"
        android:label="@string/menu_Assunto8"
        tools:layout="@layout/fragment_assunto8" />
    <fragment
        android:id="@+id/nav_assunto9"
        android:name="com.example.hipotesegaia.ui.Assunto9.Assunto9Fragment"
        android:label="@string/menu_Assunto9"
        tools:layout="@layout/fragment_assunto9" />
</navigation>